# Sovereign_Node_Go_201mh

./: .gitmodules  AGENTS_READY.md  COMPLETION_SUMMARY.md  DELIVERY_SUMMARY.md  DisasterRecovery.md  Dockerfile  INDEX.md  ORCHESTRATOR_MANIFESTO.md  QUICK_REFERENCE.md  README.md  SENTINEL.ps1  SETUP.md  SWARM_TOPOLOGY.md  VERIFICATION_CHECKLIST.md  client.go  cockpit_test.go  docker-compose.yml  example_test.go  go.mod  go.sum  install.ps1  install.sh  mcp_pro_deploy.sh  offload_sort.sh  server.go  sweep_secrets.ps1  test-agent-memory.ps1  test-agent-memory.sh
SUBSTRATE/pallet-imagefx-nft/: Cargo.toml
SUBSTRATE/pallet-imagefx-nft/src/: gallery.rs  lib.rs  metadata.rs  mint.rs  types.rs
cli/: mint_imagefx_nft.py
cockpit/: .editorconfig  .gitignore  .goreleaser.yml  Dockerfile  LICENSE  README.md  Taskfile.yaml  cockpit.yaml  debug_payload.json  go.mod  go.sum  main.go
docs/: AGENT_IDENTITY.md  AGENT_TRAINING.md  API_REFERENCE.md  ARCHITECTURE.md  FORENSIC_COMMIT_PROTOCOL.md  GITHUB_INTEGRATION.md  GOVERNANCE.md  GOVERNANCE_PROTOCOL.md  HYPERDEVELOPMENT.md  IDENTITY_FABRIC.md  METAPROGRAMMING.md  MULTI_NODE_MESH.md  NEURAL_SYNAPSE.md  SELF_HEALING_LOGIC.md  SENTINEL_GUARDIAN.md  SOVEREIGN_SCRIPT.md  SWARM_OPERATIONS.md  WIKI_ARCHITECTURE.md  WIKI_PROTOCOL.md  WIKI_TROUBLESHOOTING.md
imagefx/: anchor_proxy.py
man/: pqr.1  start_pqr.1  vault_sweep.1
mcp/: example_agent_tool.py  mcp_config.json  swend_mcp_server.py
proto/: swarm.pb.go  swarm.proto  swarm_grpc.pb.go
proxy/: broadcaster.go  discovery.go  go.mod  main.go  proxy.go
web/: dashboard.html  hud.css  (+2 more)
(+46 files in other folders)
